# Filmify

./: .gitignore  CMakeLists.txt  README.md
header/: CMakeLists.txt  Movie.h  MovieDataSet.h  MovieMethods.h  inputoutput.h
movieCSV/: movies.csv
src/: Movie.cpp  MovieDataSet.cpp  MovieMethods.cpp  a.out  compiler file  compilerfile  inputoutput.cpp  main.cpp
tests/: test.cpp
